# institution-alpha

./: .gitignore  CLAUDE.md  EVIDENCE_CHAIN.md  LEVEL2_WORKFLOW.md  build_behavior_dataset.py  pyproject.toml  run_level2_archive_day.py  run_phase2.py  train_lgbm.py
config/: settings.yaml  v6_priority_stocks.txt
configs/: universe.yaml
docs/: backtest_engine_notes.md  project_audit.md
reports/: alpha191_validation_summary.md  alpha_fusion_backtest_report.md  alpha_rule_fusion_report.md  backtest_engine_audit.md  backtest_engine_audit_phase46.md  backtest_engine_audit_phase47.md  label_report.md  level2_attribution_report.md  level2_feature_report.md  level2_full_window_feature_report.md  level2_validation_report.md  ml_dataset_report.md  phase6b_portfolio_construction_report.md  phase6b_rolling_oos_report.md  phase7a_signal_decay_report.md  phase8a_breakout_validation_report.md  tradable_report.md  universe_report.md
research/: alpha191_survey.md  dbscan_signal_review.md  signal_zoo_roadmap.md  validation_pipeline.md
scripts/: analyze_dbscan_stock_profile.py  audit_level2_daily_intersection.py  backfill_daily.py  batch_features.py  batch_sync_202501.sh  batch_validate_signals.py  build_evidence_chain.py  build_labels.py  build_level2_features.py  build_level2_features_windows.py  build_ml_dataset.py  build_tradable_flags.py  build_universe.py  check_level2_ops_outputs.py  clean_synced_from_windows.sh  deep_analysis_002516.py  delete_synced_202501.sh  evaluate_crossday_versions.py  gen_top100_universe.py  grid_search_cluster_params.py  institution_factors.py  (+33 more)
(+168 files in other folders)
