[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "institution-alpha"
version = "0.1.0"
description = "机构Alpha追踪量化系统"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "akshare>=1.14",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[tool.setuptools]
packages = ["src"]
